A Method to see the token information